--- a/predictions-final/Predictions_Combined.ipynb
+++ b/predictions-final/Predictions_Combined.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled79.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMW32EigRBfLv70305BaAo5",
+      "authorship_tag": "ABX9TyO6CFSPFl1uZuYpuErhIHgH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,10 +46,11 @@
         "colab": {}
       },
       "source": [
+        "# Combine the defense, offense and rookies into one weekly prediction\n",
         "for i in range(1, 18):\n",
-        "    defense_filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-final/week' + str(i) + '-pred-defense.csv'\n",
-        "    offense_filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-final/week' + str(i) + '-pred-offense-norookies.csv'\n",
-        "    rookie_filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-final/week' + str(i) + '-pred-offense-rookies.csv'\n",
+        "    defense_filename = 'https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/group-predictions/week' + str(i) + '-pred-defense.csv'\n",
+        "    offense_filename = 'https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/group-predictions/week' + str(i) + '-pred-offense-norookies.csv'\n",
+        "    rookie_filename = 'https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/group-predictions/week' + str(i) + '-pred-offense-rookies.csv'\n",
         "\n",
         "    defense_df = pd.read_csv(defense_filename)\n",
         "    offense_df = pd.read_csv(offense_filename)\n",
