--- a/metrics/Metrics.ipynb
+++ b/metrics/Metrics.ipynb
@@ -46,16 +46,16 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "2c7283ad-5db0-4c10-d91f-14f7ed039702",
+        "outputId": "b9c5217a-d05c-48b4-e1bc-e8fe9df255fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 255
         }
       },
       "source": [
         "w1_results_df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "_6y1buSxx8oy",
         "colab_type": "code",
-        "outputId": "897ea2ab-d894-4ef0-f68c-bf4490f12660",
+        "outputId": "5e56ece5-a3e2-4717-b0cf-814921ccd4b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -219,7 +219,7 @@
         "week1_pa_mae = mean_absolute_error(week1_act, week1_pred)\n",
         "print(week1_pa_mae)"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "1caa3633-5d8d-416c-f375-f947d935447c",
+        "outputId": "e2277b88-ac60-496e-b939-6fd57d617af9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 595
@@ -262,7 +262,7 @@
         "    week_pa_mae = mean_absolute_error(week_act, week_pred)\n",
         "    print('predicted vs act week ', i, ' - ', week_pa_mae)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,11 +311,11 @@
       "metadata": {
         "id": "88nAPYa87HpE",
         "colab_type": "code",
+        "outputId": "d5ee424c-9144-491d-8ca1-cbd8594b7ddf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 595
-        },
-        "outputId": "76d65ccf-e4e0-4058-b6fa-662d188d2d45"
+        }
       },
       "source": [
         "for i in range(1, 18):\n",
@@ -324,55 +324,65 @@
         "\n",
         "    results_df = pd.read_csv(filename)\n",
         "\n",
-        "    rank_cur = results_df['rank-cur'].tolist()\n",
-        "    rank_pred = results_df['rank-pred'].tolist()\n",
-        "    rank_act = results_df['rank-act'].tolist()\n",
+        "    player_list = results_df['player'].tolist()\n",
+        "    pred_wins = 0\n",
+        "    curr_wins = 0\n",
         "\n",
-        "    rank_ca_mae = mean_absolute_error(rank_act, rank_cur)\n",
-        "    print('current vs act rank mae week ', i, ' - ', rank_ca_mae)\n",
+        "    for player in player_list:\n",
         "\n",
-        "    rank_pa_mae = mean_absolute_error(rank_act, rank_pred)\n",
-        "    print('predicted vs act rank week ', i, ' - ', rank_pa_mae)"
+        "        rank_cur = results_df['rank-cur'].loc[(results_df['player']==player)].iloc[0]\n",
+        "        rank_pred = results_df['rank-pred'].loc[(results_df['player']==player)].iloc[0]\n",
+        "        rank_act = results_df['rank-act'].loc[(results_df['player']==player)].iloc[0]\n",
+        "\n",
+        "        #print(player, abs(rank_pred - rank_act), abs(rank_cur - rank_act))\n",
+        "\n",
+        "        if abs(rank_pred - rank_act) < abs(rank_cur - rank_act):\n",
+        "            pred_wins = pred_wins + 1\n",
+        "        else:\n",
+        "            curr_wins = curr_wins + 1\n",
+        "\n",
+        "    print('predicted wins week ', i, ' = ', pred_wins)\n",
+        "    print('current wins week ', i, ' = ', curr_wins)"
       ],
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "current vs act rank mae week  1  -  110.45691056910569\n",
-            "predicted vs act rank week  1  -  107.81626016260162\n",
-            "current vs act rank mae week  2  -  126.66829268292683\n",
-            "predicted vs act rank week  2  -  99.7479674796748\n",
-            "current vs act rank mae week  3  -  110.97723577235773\n",
-            "predicted vs act rank week  3  -  99.22113821138211\n",
-            "current vs act rank mae week  4  -  101.93333333333334\n",
-            "predicted vs act rank week  4  -  100.00162601626016\n",
-            "current vs act rank mae week  5  -  99.6910569105691\n",
-            "predicted vs act rank week  5  -  101.09105691056911\n",
-            "current vs act rank mae week  6  -  98.74471544715448\n",
-            "predicted vs act rank week  6  -  100.27642276422765\n",
-            "current vs act rank mae week  7  -  94.20650406504065\n",
-            "predicted vs act rank week  7  -  100.2260162601626\n",
-            "current vs act rank mae week  8  -  94.22926829268293\n",
-            "predicted vs act rank week  8  -  100.97723577235773\n",
-            "current vs act rank mae week  9  -  93.75934959349594\n",
-            "predicted vs act rank week  9  -  99.6390243902439\n",
-            "current vs act rank mae week  10  -  94.16747967479675\n",
-            "predicted vs act rank week  10  -  97.5170731707317\n",
-            "current vs act rank mae week  11  -  94.20975609756097\n",
-            "predicted vs act rank week  11  -  97.14634146341463\n",
-            "current vs act rank mae week  12  -  96.26666666666667\n",
-            "predicted vs act rank week  12  -  96.3739837398374\n",
-            "current vs act rank mae week  13  -  98.20162601626016\n",
-            "predicted vs act rank week  13  -  94.54146341463415\n",
-            "current vs act rank mae week  14  -  99.84552845528455\n",
-            "predicted vs act rank week  14  -  92.1739837398374\n",
-            "current vs act rank mae week  15  -  105.86016260162602\n",
-            "predicted vs act rank week  15  -  90.64878048780488\n",
-            "current vs act rank mae week  16  -  114.36422764227642\n",
-            "predicted vs act rank week  16  -  86.8390243902439\n",
-            "current vs act rank mae week  17  -  135.10569105691056\n",
-            "predicted vs act rank week  17  -  73.80162601626016\n"
+            "predicted wins week  1  =  299\n",
+            "current wins week  1  =  316\n",
+            "predicted wins week  2  =  361\n",
+            "current wins week  2  =  254\n",
+            "predicted wins week  3  =  350\n",
+            "current wins week  3  =  265\n",
+            "predicted wins week  4  =  320\n",
+            "current wins week  4  =  295\n",
+            "predicted wins week  5  =  311\n",
+            "current wins week  5  =  304\n",
+            "predicted wins week  6  =  317\n",
+            "current wins week  6  =  298\n",
+            "predicted wins week  7  =  279\n",
+            "current wins week  7  =  336\n",
+            "predicted wins week  8  =  300\n",
+            "current wins week  8  =  315\n",
+            "predicted wins week  9  =  301\n",
+            "current wins week  9  =  314\n",
+            "predicted wins week  10  =  316\n",
+            "current wins week  10  =  299\n",
+            "predicted wins week  11  =  306\n",
+            "current wins week  11  =  309\n",
+            "predicted wins week  12  =  308\n",
+            "current wins week  12  =  307\n",
+            "predicted wins week  13  =  328\n",
+            "current wins week  13  =  287\n",
+            "predicted wins week  14  =  339\n",
+            "current wins week  14  =  276\n",
+            "predicted wins week  15  =  340\n",
+            "current wins week  15  =  275\n",
+            "predicted wins week  16  =  372\n",
+            "current wins week  16  =  243\n",
+            "predicted wins week  17  =  412\n",
+            "current wins week  17  =  203\n"
           ],
           "name": "stdout"
         }
