--- a/metrics/Metrics.ipynb
+++ b/metrics/Metrics.ipynb
@@ -341,8 +341,8 @@
         "        else:\n",
         "            curr_wins = curr_wins + 1\n",
         "\n",
-        "    print('predicted wins week ', i, ' = ', pred_wins)\n",
-        "    print('current wins week ', i, ' = ', curr_wins)"
+        "    print('predicted wins by rank week ', i, ' = ', pred_wins)\n",
+        "    print('current wins by rank week ', i, ' = ', curr_wins)"
       ],
       "execution_count": 18,
       "outputs": [
@@ -383,6 +383,92 @@
             "current wins week  16  =  243\n",
             "predicted wins week  17  =  412\n",
             "current wins week  17  =  203\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ydW-dstvKgcW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 595
+        },
+        "outputId": "ab042eff-0717-4b33-f986-e2542c1f469c"
+      },
+      "source": [
+        "for i in range(1, 18):\n",
+        "\n",
+        "    filename = 'https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/metrics/data/combined-predictions/predictions-week' + str(i) + '.csv'\n",
+        "\n",
+        "    week_cur = 'week' + str(i) + '-cur'\n",
+        "    week_pred = 'week' + str(i) + '-pred'\n",
+        "    week_act = 'week' + str(i) + '-act'\n",
+        "\n",
+        "    results_df = pd.read_csv(filename)\n",
+        "\n",
+        "    player_list = results_df['player'].tolist()\n",
+        "    pred_wins = 0\n",
+        "    curr_wins = 0\n",
+        "\n",
+        "    for player in player_list:\n",
+        "\n",
+        "        points_cur = results_df[week_cur].loc[(results_df['player']==player)].iloc[0]\n",
+        "        points_pred = results_df[week_pred].loc[(results_df['player']==player)].iloc[0]\n",
+        "        points_act = results_df[week_act].loc[(results_df['player']==player)].iloc[0]\n",
+        "\n",
+        "        #print(player, abs(rank_pred - rank_act), abs(rank_cur - rank_act))\n",
+        "\n",
+        "        if abs(points_pred - points_act) < abs(points_cur - points_act):\n",
+        "            pred_wins = pred_wins + 1\n",
+        "        else:\n",
+        "            curr_wins = curr_wins + 1\n",
+        "\n",
+        "    print('predicted wins by points week ', i, ' = ', pred_wins)\n",
+        "    print('current wins by points week ', i, ' = ', curr_wins)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "predicted wins by points week  1  =  264\n",
+            "current wins by points week  1  =  351\n",
+            "predicted wins by points week  2  =  330\n",
+            "current wins by points week  2  =  285\n",
+            "predicted wins by points week  3  =  325\n",
+            "current wins by points week  3  =  290\n",
+            "predicted wins by points week  4  =  303\n",
+            "current wins by points week  4  =  312\n",
+            "predicted wins by points week  5  =  299\n",
+            "current wins by points week  5  =  316\n",
+            "predicted wins by points week  6  =  295\n",
+            "current wins by points week  6  =  320\n",
+            "predicted wins by points week  7  =  282\n",
+            "current wins by points week  7  =  333\n",
+            "predicted wins by points week  8  =  261\n",
+            "current wins by points week  8  =  354\n",
+            "predicted wins by points week  9  =  257\n",
+            "current wins by points week  9  =  358\n",
+            "predicted wins by points week  10  =  281\n",
+            "current wins by points week  10  =  334\n",
+            "predicted wins by points week  11  =  312\n",
+            "current wins by points week  11  =  303\n",
+            "predicted wins by points week  12  =  356\n",
+            "current wins by points week  12  =  259\n",
+            "predicted wins by points week  13  =  383\n",
+            "current wins by points week  13  =  232\n",
+            "predicted wins by points week  14  =  420\n",
+            "current wins by points week  14  =  195\n",
+            "predicted wins by points week  15  =  466\n",
+            "current wins by points week  15  =  149\n",
+            "predicted wins by points week  16  =  507\n",
+            "current wins by points week  16  =  108\n",
+            "predicted wins by points week  17  =  549\n",
+            "current wins by points week  17  =  66\n"
           ],
           "name": "stdout"
         }
