--- a/metrics/Metrics3.ipynb
+++ b/metrics/Metrics3.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "40a50de9-8256-496d-ec73-9dfb652bcd5d",
+        "outputId": "0368c919-2a32-4d2c-f6b7-9232aa55284b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -57,7 +57,7 @@
       "source": [
         "w1_results_df.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +195,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 11
         }
       ]
     },
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "9eb088c9-6fe6-404b-8c2a-6d318dfb9f8c",
+        "outputId": "b5c0d5ab-522d-4e30-95c5-a0cb9c7e621f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
@@ -225,232 +225,75 @@
         "        week_current = results_df['week1-cur'].tolist()\n",
         "    else:\n",
         "        week_list = results_df[week_cur].tolist()\n",
-        "        week_current = [((element / i) * (16 - i)) for element in week_list]\n",
+        "        week_current = [((element / (i -1)) * (18 - (i -1))) for element in week_list]\n",
         "\n",
         "    week_pred = results_df[week_pred].tolist()\n",
         "    week_act = results_df[week_act].tolist()\n",
         "\n",
         "    week_pa_mae = mean_absolute_error(week_act, week_pred)\n",
-        "    print('MAE predicted vs actual week {0:2d} {1:3.2f}%'.format(i, week_pa_mae))\n",
+        "    print('MAE predicted vs actual week {0:2d} {1:3.2f}'.format(i, week_pa_mae))\n",
         "\n",
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
-        "    print('MAE current vs actual week {0:2d} {1:3.2f}%'.format(i, week_ca_mae), '\\n')\n"
+        "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
       ],
-      "execution_count": 44,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "MAE predicted vs actual week  1 36.09%\n",
-            "MAE current vs actual week  1 36.30% \n",
+            "MAE predicted vs actual week  1 36.09\n",
+            "MAE current vs actual week  1 36.30 \n",
             "\n",
-            "MAE predicted vs actual week  2 32.87%\n",
-            "MAE current vs actual week  2 38.95% \n",
+            "MAE predicted vs actual week  2 32.87\n",
+            "MAE current vs actual week  2 52.89 \n",
             "\n",
-            "MAE predicted vs actual week  3 29.44%\n",
-            "MAE current vs actual week  3 31.77% \n",
+            "MAE predicted vs actual week  3 29.44\n",
+            "MAE current vs actual week  3 39.66 \n",
             "\n",
-            "MAE predicted vs actual week  4 27.63%\n",
-            "MAE current vs actual week  4 27.85% \n",
+            "MAE predicted vs actual week  4 27.63\n",
+            "MAE current vs actual week  4 34.62 \n",
             "\n",
-            "MAE predicted vs actual week  5 25.58%\n",
-            "MAE current vs actual week  5 25.14% \n",
+            "MAE predicted vs actual week  5 25.58\n",
+            "MAE current vs actual week  5 30.58 \n",
             "\n",
-            "MAE predicted vs actual week  6 23.25%\n",
-            "MAE current vs actual week  6 23.01% \n",
+            "MAE predicted vs actual week  6 23.25\n",
+            "MAE current vs actual week  6 28.52 \n",
             "\n",
-            "MAE predicted vs actual week  7 21.96%\n",
-            "MAE current vs actual week  7 21.17% \n",
+            "MAE predicted vs actual week  7 21.96\n",
+            "MAE current vs actual week  7 25.42 \n",
             "\n",
-            "MAE predicted vs actual week  8 20.57%\n",
-            "MAE current vs actual week  8 19.58% \n",
+            "MAE predicted vs actual week  8 20.57\n",
+            "MAE current vs actual week  8 22.94 \n",
             "\n",
-            "MAE predicted vs actual week  9 18.03%\n",
-            "MAE current vs actual week  9 18.04% \n",
+            "MAE predicted vs actual week  9 18.03\n",
+            "MAE current vs actual week  9 20.55 \n",
             "\n",
-            "MAE predicted vs actual week 10 16.12%\n",
-            "MAE current vs actual week 10 16.45% \n",
+            "MAE predicted vs actual week 10 16.12\n",
+            "MAE current vs actual week 10 18.19 \n",
             "\n",
-            "MAE predicted vs actual week 11 14.16%\n",
-            "MAE current vs actual week 11 14.82% \n",
+            "MAE predicted vs actual week 11 14.16\n",
+            "MAE current vs actual week 11 15.79 \n",
             "\n",
-            "MAE predicted vs actual week 12 12.52%\n",
-            "MAE current vs actual week 12 13.56% \n",
+            "MAE predicted vs actual week 12 12.52\n",
+            "MAE current vs actual week 12 13.91 \n",
             "\n",
-            "MAE predicted vs actual week 13 11.00%\n",
-            "MAE current vs actual week 13 12.39% \n",
+            "MAE predicted vs actual week 13 11.00\n",
+            "MAE current vs actual week 13 11.78 \n",
             "\n",
-            "MAE predicted vs actual week 14 9.04%\n",
-            "MAE current vs actual week 14 10.73% \n",
+            "MAE predicted vs actual week 14 9.04\n",
+            "MAE current vs actual week 14 10.00 \n",
             "\n",
-            "MAE predicted vs actual week 15 7.07%\n",
-            "MAE current vs actual week 15 8.89% \n",
+            "MAE predicted vs actual week 15 7.07\n",
+            "MAE current vs actual week 15 8.40 \n",
             "\n",
-            "MAE predicted vs actual week 16 5.20%\n",
-            "MAE current vs actual week 16 7.31% \n",
+            "MAE predicted vs actual week 16 5.20\n",
+            "MAE current vs actual week 16 6.92 \n",
             "\n",
-            "MAE predicted vs actual week 17 2.99%\n",
-            "MAE current vs actual week 17 6.95% \n",
+            "MAE predicted vs actual week 17 2.99\n",
+            "MAE current vs actual week 17 5.15 \n",
             "\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iCfsBjS-Nt3z",
-        "colab_type": "code",
-        "outputId": "277e515e-c2ad-4b2f-f702-80d9a66df9b4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        }
-      },
-      "source": [
-        "w2_results_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/metrics/data/combined-predictions/predictions-week2.csv')\n",
-        "w2_results_df.head()"
-      ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>player</th>\n",
-              "      <th>first</th>\n",
-              "      <th>last</th>\n",
-              "      <th>name</th>\n",
-              "      <th>position</th>\n",
-              "      <th>week2-cur</th>\n",
-              "      <th>week2-pred</th>\n",
-              "      <th>week2-act</th>\n",
-              "      <th>week2-diff</th>\n",
-              "      <th>week2-pct</th>\n",
-              "      <th>rank-cur</th>\n",
-              "      <th>rank-pred</th>\n",
-              "      <th>rank-act</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>MB-4075</td>\n",
-              "      <td>Marquise</td>\n",
-              "      <td>Brown</td>\n",
-              "      <td>Marquise Brown</td>\n",
-              "      <td>WR</td>\n",
-              "      <td>30.70</td>\n",
-              "      <td>460</td>\n",
-              "      <td>73.70</td>\n",
-              "      <td>386.800000</td>\n",
-              "      <td>0.839957</td>\n",
-              "      <td>8.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>180.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>JJ-0587</td>\n",
-              "      <td>Josh</td>\n",
-              "      <td>Jacobs</td>\n",
-              "      <td>Josh Jacobs</td>\n",
-              "      <td>RB</td>\n",
-              "      <td>23.30</td>\n",
-              "      <td>349</td>\n",
-              "      <td>148.30</td>\n",
-              "      <td>201.200000</td>\n",
-              "      <td>0.575680</td>\n",
-              "      <td>22.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>61.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>KM-3500</td>\n",
-              "      <td>Kyler</td>\n",
-              "      <td>Murray</td>\n",
-              "      <td>Kyler Murray</td>\n",
-              "      <td>QB</td>\n",
-              "      <td>21.62</td>\n",
-              "      <td>324</td>\n",
-              "      <td>266.66</td>\n",
-              "      <td>57.640000</td>\n",
-              "      <td>0.177737</td>\n",
-              "      <td>27.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>10.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>TG-1950</td>\n",
-              "      <td>Todd</td>\n",
-              "      <td>Gurley</td>\n",
-              "      <td>Todd Gurley</td>\n",
-              "      <td>RB</td>\n",
-              "      <td>10.10</td>\n",
-              "      <td>321</td>\n",
-              "      <td>178.30</td>\n",
-              "      <td>143.560428</td>\n",
-              "      <td>0.446033</td>\n",
-              "      <td>86.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>42.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>TM-2275</td>\n",
-              "      <td>Terry</td>\n",
-              "      <td>McLaurin</td>\n",
-              "      <td>Terry McLaurin</td>\n",
-              "      <td>WR</td>\n",
-              "      <td>20.50</td>\n",
-              "      <td>307</td>\n",
-              "      <td>117.40</td>\n",
-              "      <td>190.100000</td>\n",
-              "      <td>0.618211</td>\n",
-              "      <td>31.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>104.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    player     first      last  ... rank-cur rank-pred  rank-act\n",
-              "0  MB-4075  Marquise     Brown  ...      8.0       1.0     180.0\n",
-              "1  JJ-0587      Josh    Jacobs  ...     22.0       2.0      61.0\n",
-              "2  KM-3500     Kyler    Murray  ...     27.0       3.0      10.0\n",
-              "3  TG-1950      Todd    Gurley  ...     86.0       4.0      42.0\n",
-              "4  TM-2275     Terry  McLaurin  ...     31.0       5.0     104.0\n",
-              "\n",
-              "[5 rows x 13 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 36
         }
       ]
     }
