--- a/metrics/Metrics3.ipynb
+++ b/metrics/Metrics3.ipynb
@@ -48,16 +48,26 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "0368c919-2a32-4d2c-f6b7-9232aa55284b",
+        "outputId": "b9736fbc-aa72-4e42-a51f-b1523696ad29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
+        "#### The week 1 predictions\n",
+        "\n",
+        "# week1-cur = 2018 total points\n",
+        "# week1-pred = predicted points for the season\n",
+        "# week1-act = actual points for the season\n",
+        "\n",
+        "# weekn-cur = week (n-1) actual points\n",
+        "# weekn-pred = predicted points for the rest of the season (n-17)\n",
+        "# weekn-act = actual points for the rest of the season (n-17)\n",
+        "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -204,39 +214,47 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "b5c0d5ab-522d-4e30-95c5-a0cb9c7e621f",
+        "outputId": "58816054-0d63-41a0-d237-75786ffe5659",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
         }
       },
       "source": [
+        "# Calculate the MAE for predicted points vs. actual points\n",
+        "# Calculate the MAE for current points using the average of previous weeks\n",
         "for i in range(1, 18):\n",
         "\n",
         "    filename = 'https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/metrics/data/combined-predictions/predictions-week' + str(i) + '.csv'\n",
         "    \n",
+        "    # Column names\n",
         "    week_cur = 'week' + str(i) + '-cur'\n",
         "    week_pred = 'week' + str(i) + '-pred'\n",
         "    week_act = 'week' + str(i) + '-act'\n",
         "\n",
+        "    # Weekly predictions\n",
         "    results_df = pd.read_csv(filename)\n",
         "\n",
+        "    # Create the current points list using 2018 points in week 1 and average points going forward\n",
         "    if i == 1:\n",
         "        week_current = results_df['week1-cur'].tolist()\n",
         "    else:\n",
         "        week_list = results_df[week_cur].tolist()\n",
         "        week_current = [((element / (i -1)) * (18 - (i -1))) for element in week_list]\n",
         "\n",
+        "    # Creat the prediction and actual lists\n",
         "    week_pred = results_df[week_pred].tolist()\n",
         "    week_act = results_df[week_act].tolist()\n",
         "\n",
+        "    # Calculate the MAE for predicted vs. actual\n",
         "    week_pa_mae = mean_absolute_error(week_act, week_pred)\n",
         "    print('MAE predicted vs actual week {0:2d} {1:3.2f}'.format(i, week_pa_mae))\n",
         "\n",
+        "    # Calculate the MAE for current vs. actual\n",
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
         "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
       ],
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
