--- a/metrics/Metrics3.ipynb
+++ b/metrics/Metrics3.ipynb
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "3600bc66-7ef2-4085-af84-6b1c02ef1729",
+        "outputId": "a21a191c-3c16-4057-c1d9-3e80157b1587",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
@@ -239,6 +239,8 @@
         "    if i == 1:\n",
         "        week_current = results_df['week1-cur'].tolist()\n",
         "    else:\n",
+        "        # for each player (element) calculate the average points (element/(i-1)) and multiply by remaining games (17-(i-1))\n",
+        "        # the 17th week is 0 and represents the bye week (17 weeks and 16 games)\n",
         "        week_list = results_df[week_cur].tolist()\n",
         "        week_current = [((element / (i -1)) * (17 - (i -1))) for element in week_list]\n",
         "\n",
@@ -254,7 +256,7 @@
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
         "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
