--- a/predictions-final/Offense_Predictions_All.ipynb
+++ b/predictions-final/Offense_Predictions_All.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled84.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMYrFKy4/r1WK49JdBjLLKo",
+      "authorship_tag": "ABX9TyNP0gXQOoEf22miZa7lEVlU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "DffZtLAbFvcW",
         "colab_type": "code",
-        "outputId": "de5f8a99-9544-4279-9e66-dd5262770e6d",
+        "outputId": "ec9c6e65-4199-481d-804d-1d0ec803a269",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "m78bxZQ_GNtQ",
         "colab_type": "code",
-        "outputId": "33726094-c8ca-4923-99bb-4075f60c115f",
+        "outputId": "bb942d87-e6a6-4025-b551-377c5b5e311a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 355
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "JaUeCnKAGTXY",
         "colab_type": "code",
-        "outputId": "8afb4acf-5270-493a-b175-8a28542f0735",
+        "outputId": "01c90b94-d848-4457-d1a6-4bc27d31f61a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -777,7 +777,7 @@
       "metadata": {
         "id": "-tpuw1teGd-v",
         "colab_type": "code",
-        "outputId": "eb0aa9b5-1ed0-4560-8898-cbaf95cd6b97",
+        "outputId": "f7da1535-eac5-4f75-98a7-05ea17463e94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -890,7 +890,7 @@
       "metadata": {
         "id": "5rdO3zKnGhX3",
         "colab_type": "code",
-        "outputId": "04eda8a5-240c-454f-ab4e-2876c6064533",
+        "outputId": "0eee6e4f-6aa4-4dd6-ef45-8dde16dce064",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1147,7 +1147,7 @@
         "        act_points = actuals.sum()\n",
         "\n",
         "        # Run the model excluding players without enough data\n",
-        "        if (start_year < 2016) & (player != 'GG-0310') & (train_data.sum() > 10):\n",
+        "        if (start_year < 2016) & (train_data.sum() > 50):\n",
         "            # ARIMA model\n",
         "            model = pm.auto_arima(train_data, start_p=1, start_q=1,\n",
         "                                  test='adf',       # use adftest to find optimal 'd'\n",
